# coinduction

./: .gitignore  Makefile  README.md  coq-coinduction.install  coq-coinduction.opam  dune-project  rocq-coinduction.install  rocq-coinduction.opam
src/: dune  reification.ml  reification_g.mlg
theories/: coinduction.v  dune  lattice.v  tactics.v  tests.v
