opam-version: "2.0"
maintainer: "damien.pous@ens-lyon.fr"
version: "dev"

homepage: "https://github.com/elefthei/coinduction"
dev-repo: "git+https://github.com/elefthei/coinduction.git"
bug-reports: "https://github.com/elefthei/coinduction/issues"
license: "GNU LGPL"

synopsis: "A library for doing proofs by (enhanced) coinduction (fork)"
description: """
Coinductive predicates are greatest fixpoints of monotone functions.
The `companion' makes it possible to enhance the associated coinduction scheme.
This library provides a formalisation on enhancements based on the companion, as well as tactics in making it straightforward to perform proofs by enhanced coinduction.
"""

build: [
  "dune" "subst"
  "dune" "build" "-p" name "-j" jobs
  "dune" "runtest" "-p" name "-j" jobs
]
install: [
  "dune" "install" "-p" name "--create-install-files"
]

depends: [
  "ocaml" {>= "4.07"}
  "dune" {>= "2.8"}
  "coq" {>= "9.0.0" & < "9.1~"}
  "coq-core" {with-coq}
]

tags: [
  "keyword:coinduction"
  "keyword:up to techniques"
  "keyword:companion"
  "keyword:bisimilarity"
  "logpath:Coinduction"
]
authors: [
  "Damien Pous"
]
