opam-version: "2.0"
maintainer: "damien.pous@ens-lyon.fr"
version: "dev"

homepage: "https://github.com/elefthei/coinduction"
dev-repo: "git+https://github.com/elefthei/coinduction.git"
bug-reports: "https://github.com/elefthei/coinduction/issues"
license: "GNU LGPL"

synopsis: "A library for doing proofs by (enhanced) coinduction (fork)"
description: """
Coinductive predicates are greatest fixpoints of monotone functions.
The `companion' makes it possible to enhance the associated coinduction scheme.
This library provides a formalisation on enhancements based on the companion, as well as tactics in making it straightforward to perform proofs by enhanced coinduction.
"""

build: [
  "dune" "subst"
  "dune" "build" "-p" name "-j" jobs
  "dune" "runtest" "-p" name "-j" jobs
]
install: [
  "dune" "install" "-p" name "--create-install-files"
]

depends: [
  "ocaml" {>= "4.14"}
  "dune" {>= "3.21"}
  "rocq-prover" {>= "9.0.0"}
  "rocq-runtime" {>= "9.0.0"}
]

tags: [
  "keyword:coinduction"
  "keyword:up to techniques"
  "keyword:companion"
  "keyword:bisimilarity"
  "logpath:Coinduction"
]
authors: [
  "Damien Pous"
]
